src/lpparser/LPParser.py
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class LPParser(Parser):
    grammarFileName = "LP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = ["<INVALID>", "':'", "'free'", "<INVALID>", "<INVALID>",
                    "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                    "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                    "<INVALID>", "<INVALID>", "'+'", "'-'", "<INVALID>",
                    "<INVALID>", "'='"]

    symbolicNames = ["<INVALID>", "<INVALID>", "<INVALID>", "LF", "MAXIMIZE",
                     "MINIMIZE", "BOUNDS", "BINARIES", "GENERALS", "ST",
                     "END", "INF", "COMMENT", "NEWLINE", "NUMBER", "PLUS",
                     "MINUS", "LEQ", "GEQ", "EQ", "NAME", "SPACES"]

    RULE_prog = 0
    RULE_direction = 1
    RULE_objective_region = 2
    RULE_constraint_region = 3
    RULE_bound_region = 4
    RULE_var_name = 5
    RULE_cstr_name = 6
    RULE_binaries_region = 7
    RULE_generals_region = 8
    RULE_expr = 9
    RULE_naming = 10
    RULE_cstr = 11
    RULE_obj = 12
    RULE_eof = 13
    RULE_term = 14
    RULE_bound = 15
    RULE_onesided_bound = 16
    RULE_twosided_bound = 17
    RULE_bound_free = 18
    RULE_num_or_inf = 19
    RULE_sense = 20

    ruleNames = ["prog", "direction", "objective_region", "constraint_region",
                 "bound_region", "var_name", "cstr_name", "binaries_region",
                 "generals_region", "expr", "naming", "cstr", "obj", "eof",
                 "term", "bound", "onesided_bound", "twosided_bound",
                 "bound_free", "num_or_inf", "sense"]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    LF = 3
    MAXIMIZE = 4
    MINIMIZE = 5
    BOUNDS = 6
    BINARIES = 7
    GENERALS = 8
    ST = 9
    END = 10
    INF = 11
    COMMENT = 12
    NEWLINE = 13
    NUMBER = 14
    PLUS = 15
    MINUS = 16
    LEQ = 17
    GEQ = 18
    EQ = 19
    NAME = 20
    SPACES = 21

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def objective_region(self):
            return self.getTypedRuleContext(LPParser.Objective_regionContext, 0)

        def constraint_region(self):
            return self.getTypedRuleContext(LPParser.Constraint_regionContext, 0)

        def bound_region(self):
            return self.getTypedRuleContext(LPParser.Bound_regionContext, 0)

        def eof(self):
            return self.getTypedRuleContext(LPParser.EofContext, 0)

        def generals_region(self):
            return self.getTypedRuleContext(LPParser.Generals_regionContext, 0)

        def binaries_region(self):
            return self.getTypedRuleContext(LPParser.Binaries_regionContext, 0)

        def getRuleIndex(self):
            return LPParser.RULE_prog

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterProg"):
                listener.enterProg(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitProg"):
                listener.exitProg(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitProg"):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)

    def prog(self):

        localctx = LPParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.objective_region()
            self.state = 43
            self.constraint_region()
            self.state = 44
            self.bound_region()
            self.state = 57
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 4, self._ctx)
            if la_ == 1:
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == LPParser.GENERALS:
                    self.state = 45
                    self.generals_region()

                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == LPParser.BINARIES:
                    self.state = 48
                    self.binaries_region()

                pass

            elif la_ == 2:
                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == LPParser.BINARIES:
                    self.state = 51
                    self.binaries_region()

                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == LPParser.GENERALS:
                    self.state = 54
                    self.generals_region()

                pass

            self.state = 59
            self.eof()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DirectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MAXIMIZE(self):
            return self.getToken(LPParser.MAXIMIZE, 0)

        def MINIMIZE(self):
            return self.getToken(LPParser.MINIMIZE, 0)

        def getRuleIndex(self):
            return LPParser.RULE_direction

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterDirection"):
                listener.enterDirection(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitDirection"):
                listener.exitDirection(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitDirection"):
                return visitor.visitDirection(self)
            else:
                return visitor.visitChildren(self)

    def direction(self):

        localctx = LPParser.DirectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_direction)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            _la = self._input.LA(1)
            if not (_la == LPParser.MAXIMIZE or _la == LPParser.MINIMIZE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Objective_regionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def direction(self):
            return self.getTypedRuleContext(LPParser.DirectionContext, 0)

        def obj(self):
            return self.getTypedRuleContext(LPParser.ObjContext, 0)

        def LF(self, i: int = None):
            if i is None:
                return self.getTokens(LPParser.LF)
            else:
                return self.getToken(LPParser.LF, i)

        def NEWLINE(self, i: int = None):
            if i is None:
                return self.getTokens(LPParser.NEWLINE)
            else:
                return self.getToken(LPParser.NEWLINE, i)

        def getRuleIndex(self):
            return LPParser.RULE_objective_region

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterObjective_region"):
                listener.enterObjective_region(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitObjective_region"):
                listener.exitObjective_region(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitObjective_region"):
                return visitor.visitObjective_region(self)
            else:
                return visitor.visitChildren(self)

    def objective_region(self):

        localctx = LPParser.Objective_regionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_objective_region)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == LPParser.LF:
                self.state = 63
                self.match(LPParser.LF)
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 69
            self.direction()
            self.state = 71
            self._errHandler.sync(self)
            _alt = 1
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 70
                    self.match(LPParser.NEWLINE)

                else:
                    raise NoViableAltException(self)
                self.state = 73
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 6, self._ctx)

            self.state = 75
            self.obj()
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == LPParser.NEWLINE:
                self.state = 76
                self.match(LPParser.NEWLINE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Constraint_regionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ST(self):
            return self.getToken(LPParser.ST, 0)

        def cstr(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(LPParser.CstrContext)
            else:
                return self.getTypedRuleContext(LPParser.CstrContext, i)

        def NEWLINE(self, i: int = None):
            if i is None:
                return self.getTokens(LPParser.NEWLINE)
            else:
                return self.getToken(LPParser.NEWLINE, i)

        def getRuleIndex(self):
            return LPParser.RULE_constraint_region

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterConstraint_region"):
                listener.enterConstraint_region(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitConstraint_region"):
                listener.exitConstraint_region(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitConstraint_region"):
                return visitor.visitConstraint_region(self)
            else:
                return visitor.visitChildren(self)

    def constraint_region(self):

        localctx = LPParser.Constraint_regionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_constraint_region)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(LPParser.ST)
            self.state = 86
            self._errHandler.sync(self)
            _alt = 1
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 81
                    self._errHandler.sync(self)
                    _alt = 1
                    while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                        if _alt == 1:
                            self.state = 80
                            self.match(LPParser.NEWLINE)

                        else:
                            raise NoViableAltException(self)
                        self.state = 83
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input, 8, self._ctx)

                    self.state = 85
                    self.cstr()

                else:
                    raise NoViableAltException(self)
                self.state = 88
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 9, self._ctx)

            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == LPParser.NEWLINE:
                self.state = 90
                self.match(LPParser.NEWLINE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Bound_regionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOUNDS(self):
            return self.getToken(LPParser.BOUNDS, 0)

        def bound(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(LPParser.BoundContext)
            else:
                return self.getTypedRuleContext(LPParser.BoundContext, i)

        def NEWLINE(self, i: int = None):
            if i is None:
                return self.getTokens(LPParser.NEWLINE)
            else:
                return self.getToken(LPParser.NEWLINE, i)

        def getRuleIndex(self):
            return LPParser.RULE_bound_region

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterBound_region"):
                listener.enterBound_region(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitBound_region"):
                listener.exitBound_region(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBound_region"):
                return visitor.visitBound_region(self)
            else:
                return visitor.visitChildren(self)

    def bound_region(self):

        localctx = LPParser.Bound_regionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_bound_region)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(LPParser.BOUNDS)
            self.state = 100
            self._errHandler.sync(self)
            _alt = 1
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 95
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 94
                        self.match(LPParser.NEWLINE)
                        self.state = 97
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la == LPParser.NEWLINE):
                            break

                    self.state = 99
                    self.bound()

                else:
                    raise NoViableAltException(self)
                self.state = 102
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 12, self._ctx)

            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == LPParser.NEWLINE:
                self.state = 104
                self.match(LPParser.NEWLINE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(LPParser.NAME, 0)

        def getRuleIndex(self):
            return LPParser.RULE_var_name

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterVar_name"):
                listener.enterVar_name(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitVar_name"):
                listener.exitVar_name(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitVar_name"):
                return visitor.visitVar_name(self)
            else:
                return visitor.visitChildren(self)

    def var_name(self):

        localctx = LPParser.Var_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(LPParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Cstr_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(LPParser.NAME, 0)

        def getRuleIndex(self):
            return LPParser.RULE_cstr_name

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterCstr_name"):
                listener.enterCstr_name(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitCstr_name"):
                listener.exitCstr_name(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitCstr_name"):
                return visitor.visitCstr_name(self)
            else:
                return visitor.visitChildren(self)

    def cstr_name(self):

        localctx = LPParser.Cstr_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_cstr_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(LPParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Binaries_regionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BINARIES(self):
            return self.getToken(LPParser.BINARIES, 0)

        def NEWLINE(self, i: int = None):
            if i is None:
                return self.getTokens(LPParser.NEWLINE)
            else:
                return self.getToken(LPParser.NEWLINE, i)

        def var_name(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(LPParser.Var_nameContext)
            else:
                return self.getTypedRuleContext(LPParser.Var_nameContext, i)

        def getRuleIndex(self):
            return LPParser.RULE_binaries_region

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterBinaries_region"):
                listener.enterBinaries_region(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitBinaries_region"):
                listener.exitBinaries_region(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBinaries_region"):
                return visitor.visitBinaries_region(self)
            else:
                return visitor.visitChildren(self)

    def binaries_region(self):

        localctx = LPParser.Binaries_regionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_binaries_region)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(LPParser.BINARIES)
            self.state = 122
            self._errHandler.sync(self)
            _alt = 1
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 113
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 112
                        self.match(LPParser.NEWLINE)
                        self.state = 115
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la == LPParser.NEWLINE):
                            break

                    self.state = 118
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 117
                        self.var_name()
                        self.state = 120
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la == LPParser.NAME):
                            break


                else:
                    raise NoViableAltException(self)
                self.state = 124
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 16, self._ctx)

            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == LPParser.NEWLINE:
                self.state = 126
                self.match(LPParser.NEWLINE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Generals_regionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GENERALS(self):
            return self.getToken(LPParser.GENERALS, 0)

        def NEWLINE(self, i: int = None):
            if i is None:
                return self.getTokens(LPParser.NEWLINE)
            else:
                return self.getToken(LPParser.NEWLINE, i)

        def var_name(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(LPParser.Var_nameContext)
            else:
                return self.getTypedRuleContext(LPParser.Var_nameContext, i)

        def getRuleIndex(self):
            return LPParser.RULE_generals_region

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterGenerals_region"):
                listener.enterGenerals_region(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitGenerals_region"):
                listener.exitGenerals_region(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitGenerals_region"):
                return visitor.visitGenerals_region(self)
            else:
                return visitor.visitChildren(self)

    def generals_region(self):

        localctx = LPParser.Generals_regionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_generals_region)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(LPParser.GENERALS)
            self.state = 140
            self._errHandler.sync(self)
            _alt = 1
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 131
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 130
                        self.match(LPParser.NEWLINE)
                        self.state = 133
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la == LPParser.NEWLINE):
                            break

                    self.state = 136
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 135
                        self.var_name()
                        self.state = 138
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la == LPParser.NAME):
                            break


                else:
                    raise NoViableAltException(self)
                self.state = 142
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 20, self._ctx)

            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == LPParser.NEWLINE:
                self.state = 144
                self.match(LPParser.NEWLINE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(LPParser.TermContext)
            else:
                return self.getTypedRuleContext(LPParser.TermContext, i)

        def MINUS(self, i: int = None):
            if i is None:
                return self.getTokens(LPParser.MINUS)
            else:
                return self.getToken(LPParser.MINUS, i)

        def PLUS(self, i: int = None):
            if i is None:
                return self.getTokens(LPParser.PLUS)
            else:
                return self.getToken(LPParser.PLUS, i)

        def NEWLINE(self, i: int = None):
            if i is None:
                return self.getTokens(LPParser.NEWLINE)
            else:
                return self.getToken(LPParser.NEWLINE, i)

        def getRuleIndex(self):
            return LPParser.RULE_expr

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterExpr"):
                listener.enterExpr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitExpr"):
                listener.exitExpr(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitExpr"):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)

    def expr(self):

        localctx = LPParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_expr)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == LPParser.MINUS:
                self.state = 147
                self.match(LPParser.MINUS)

            self.state = 167
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 25, self._ctx)
            while _alt != 1 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1 + 1:
                    self.state = 153
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input, 23, self._ctx)
                    while _alt != 1 and _alt != ATN.INVALID_ALT_NUMBER:
                        if _alt == 1 + 1:
                            self.state = 150
                            self.match(LPParser.NEWLINE)
                        self.state = 155
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input, 23, self._ctx)

                    self.state = 156
                    self.term()
                    self.state = 160
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input, 24, self._ctx)
                    while _alt != 1 and _alt != ATN.INVALID_ALT_NUMBER:
                        if _alt == 1 + 1:
                            self.state = 157
                            self.match(LPParser.NEWLINE)
                        self.state = 162
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input, 24, self._ctx)

                    self.state = 163
                    _la = self._input.LA(1)
                    if not (_la == LPParser.PLUS or _la == LPParser.MINUS):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                self.state = 169
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 25, self._ctx)

            self.state = 170
            self.term()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NamingContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cstr_name(self):
            return self.getTypedRuleContext(LPParser.Cstr_nameContext, 0)

        def getRuleIndex(self):
            return LPParser.RULE_naming

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterNaming"):
                listener.enterNaming(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitNaming"):
                listener.exitNaming(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitNaming"):
                return visitor.visitNaming(self)
            else:
                return visitor.visitChildren(self)

    def naming(self):

        localctx = LPParser.NamingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_naming)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.cstr_name()
            self.state = 173
            self.match(LPParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CstrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(LPParser.ExprContext, 0)

        def sense(self):
            return self.getTypedRuleContext(LPParser.SenseContext, 0)

        def NUMBER(self):
            return self.getToken(LPParser.NUMBER, 0)

        def naming(self):
            return self.getTypedRuleContext(LPParser.NamingContext, 0)

        def NEWLINE(self, i: int = None):
            if i is None:
                return self.getTokens(LPParser.NEWLINE)
            else:
                return self.getToken(LPParser.NEWLINE, i)

        def getRuleIndex(self):
            return LPParser.RULE_cstr

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterCstr"):
                listener.enterCstr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitCstr"):
                listener.exitCstr(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitCstr"):
                return visitor.visitCstr(self)
            else:
                return visitor.visitChildren(self)

    def cstr(self):

        localctx = LPParser.CstrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_cstr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 26, self._ctx)
            if la_ == 1:
                self.state = 175
                self.naming()

            self.state = 178
            self.expr()
            self.state = 182
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 27, self._ctx)
            while _alt != 1 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1 + 1:
                    self.state = 179
                    self.match(LPParser.NEWLINE)
                self.state = 184
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 27, self._ctx)

            self.state = 185
            self.sense()
            self.state = 189
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 28, self._ctx)
            while _alt != 1 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1 + 1:
                    self.state = 186
                    self.match(LPParser.NEWLINE)
                self.state = 191
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 28, self._ctx)
